--- a/main.css
+++ b/main.css
@@ -23,6 +23,7 @@ input{
 
 button{
     padding: 10px;
+    width: 100vw;
     font-size: 50px;
     font-weight: bold;
     color: white;
@@ -38,4 +39,12 @@ button{
 .seat-row{
     font-size: 20px;
     color: white;
+}
+
+.center{
+    text-align: center;
+}
+
+.breathe{
+    margin-top: 20px;
 }
